Fixed gradient pseudo issue by setting hero to overflow hidden

--- a/custom-style.css
+++ b/custom-style.css
@@ -303,10 +303,11 @@ body:not(.home) .site-header:before {
         display: -ms-flexbox;
     display: flex;
     height: 100vh;
-    min-height: 55rem;
         -webkit-box-pack: center;
         -ms-flex-pack: center;
     justify-content: center;
+    min-height: 55rem;
+    overflow: hidden;
     position: relative;
 }
 
@@ -314,9 +315,9 @@ body:not(.home) .site-header:before {
     background-image: linear-gradient( 31deg, #2082D0 0%, #F7CC39 100% );
     content: "";
     display: block;
-    height: 100vh;
     opacity: 0.55;
     position: absolute;
+        bottom: 0;
         left: 0;
         right: 0;
         top: 0;
